-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 20
-
Component/s: hotspot
-
b07
Looks similar to JDK-8241904.
java -XX:+UseSSE42Intrinsics -XX:UseSSE=1 -version
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/workspace/open/src/hotspot/cpu/x86/assembler_x86.cpp:5983), pid=3602858, tid=3602859
# Error: assert(VM_Version::supports_sse4_1() || VM_Version::supports_avx()) failed
#
# JRE version: (25.0+26) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 25-ea+26-LTS-3300, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x719b7f] Assembler::ptest(XMMRegister, XMMRegister)+0x12f
Stack: [0x000070c1ea900000,0x000070c1eaa00000], sp=0x000070c1ea9fbb40, free space=1006k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x719b7f] Assembler::ptest(XMMRegister, XMMRegister)+0x12f (assembler_x86.cpp:5983)
V [libjvm.so+0x157d6b1] MacroAssembler::vectorized_mismatch(Register, Register, Register, Register, Register, Register, Register, XMMRegister, XMMRegister, XMMRegister)+0x1a61
V [libjvm.so+0x19a0408] StubGenerator::generate_vectorizedMismatch()+0x98
V [libjvm.so+0x19a3e58] StubGenerator::generate_final_stubs()+0xa8
V [libjvm.so+0x19a5bf5] StubGenerator_generate(CodeBuffer*, StubGenBlobId)+0x105
V [libjvm.so+0x1a1abc9] initialize_stubs(StubGenBlobId, int, int, char const*, char const*, char const*) [clone .constprop.0]+0x239
V [libjvm.so+0x1a1b7e8] final_stubs_init()+0x38
V [libjvm.so+0xfd7694] init_globals2()+0x84
V [libjvm.so+0x1af1d5b] Threads::create_vm(JavaVMInitArgs*, bool*)+0x3cb
V [libjvm.so+0x119c9f4] JNI_CreateJavaVM+0x54
C [libjli.so+0x3dff] JavaMain+0x8f
java -XX:+UseSSE42Intrinsics -XX:UseSSE=1 -version
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/workspace/open/src/hotspot/cpu/x86/assembler_x86.cpp:5983), pid=3602858, tid=3602859
# Error: assert(VM_Version::supports_sse4_1() || VM_Version::supports_avx()) failed
#
# JRE version: (25.0+26) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 25-ea+26-LTS-3300, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x719b7f] Assembler::ptest(XMMRegister, XMMRegister)+0x12f
Stack: [0x000070c1ea900000,0x000070c1eaa00000], sp=0x000070c1ea9fbb40, free space=1006k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x719b7f] Assembler::ptest(XMMRegister, XMMRegister)+0x12f (assembler_x86.cpp:5983)
V [libjvm.so+0x157d6b1] MacroAssembler::vectorized_mismatch(Register, Register, Register, Register, Register, Register, Register, XMMRegister, XMMRegister, XMMRegister)+0x1a61
V [libjvm.so+0x19a0408] StubGenerator::generate_vectorizedMismatch()+0x98
V [libjvm.so+0x19a3e58] StubGenerator::generate_final_stubs()+0xa8
V [libjvm.so+0x19a5bf5] StubGenerator_generate(CodeBuffer*, StubGenBlobId)+0x105
V [libjvm.so+0x1a1abc9] initialize_stubs(StubGenBlobId, int, int, char const*, char const*, char const*) [clone .constprop.0]+0x239
V [libjvm.so+0x1a1b7e8] final_stubs_init()+0x38
V [libjvm.so+0xfd7694] init_globals2()+0x84
V [libjvm.so+0x1af1d5b] Threads::create_vm(JavaVMInitArgs*, bool*)+0x3cb
V [libjvm.so+0x119c9f4] JNI_CreateJavaVM+0x54
C [libjli.so+0x3dff] JavaMain+0x8f
- caused by
-
JDK-8296168 x86: Add reasonable constraints between AVX and SSE
-
- Resolved
-
- relates to
-
JDK-8241904 assert(VM_Version::supports_sse4_1()) failed in Assembler::ptest
-
- Closed
-
- links to
-
Commit(master)
openjdk/jdk/e1b2229b
-
Review(master)
openjdk/jdk/26151