8358592: Assert in Assembler::ptest due to missing SSE42 support

Setting "-XX:UseSSE=1" in command line prevents the code from entering the block which causes UseSSE42Intrinsics to not be correctly set.