src/hotspot/cpu/x86/vm_version_x86.cpp
@@ -1491,6 +1491,8 @@ void VM_Version::get_processor_features() {
         }
         FLAG_SET_DEFAULT(UseSSE42Intrinsics, false);
       }
+    }else{
+      FLAG_SET_DEFAULT(UseSSE42Intrinsics, false);
     }
 
     if (FLAG_IS_DEFAULT(AllocatePrefetchInstr) && supports_3dnow_prefetch()) {
@@ -1643,6 +1645,8 @@ void VM_Version::get_processor_features() {
         }
         FLAG_SET_DEFAULT(UseSSE42Intrinsics, false);
       }
+    }else{
+      FLAG_SET_DEFAULT(UseSSE42Intrinsics, false);
     }
     if (is_atom_family() || is_knights_family()) {
 #ifdef COMPILER2
